sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:15: error: illegal start of simple pattern
	}
        ^